# sdk-bash

./: .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  script.sh
.github/workflows/: integration.yml  main.yml  release.yml  wc_build_binaries.yml
commands/: Cargo.toml
commands/src/: config.rs  descriptions.rs  lib.rs  state.rs  user.rs  ux.rs  validate.rs
commands/src/ux/: events.rs  format.rs  print.rs  progressbar.rs  secrets.rs  spinner.rs  start.rs  track.rs
commands/src/ux/prompt/: autocomplete.rs  checkbox.rs  confirm.rs  datetime.rs  editor.rs  input.rs  list.rs  mod.rs  number.rs  password.rs  secret.rs
list_fixture/: list.txt
scripts/: build  build-setup  package  test-smoke.sh
sdk/: Cargo.toml  README.md
sdk-integration-testing/: Dockerfile  go.mod  go.sum  mock-api.go
sdk-integration-testing/sdk-compatibility-testing/: verify-exemplar.go
sdk-integration-testing/sdk-compatibility-testing/bash/: exemplar.sh
sdk-integration-testing/sdk-compatibility-testing/items/: env.go  transcript_items.go
sdk-integration-testing/sdk-compatibility-testing/structs/: structs.go
sdk/src/: daemon.rs  error.rs  lib.rs  sdk.rs
sdk/src/daemon/: mod.rs
sdk/src/ux/: format.rs  mod.rs  print.rs  progress_bar.rs  secrets.rs  spinner.rs
sdk/src/ux/prompt/: autocomplete.rs  checkbox.rs  confirm.rs  datetime.rs  editor.rs  executer.rs  input.rs  list.rs  mod.rs  number.rs  password.rs  secret.rs
src/: main.rs
