[package]
name = "bash-sdk"
version = "2.9.0-rc0"
authors = ["Danielle Brook-Roberge <danielle@cto.ai>"]
edition = "2018"
[[bin]]
name = "ctoai"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

[dependencies]
commands = { path = "commands" }
clap = "2.33.0"
