[package]
name = "commands"
version = "0.1.0"
authors = ["Hugo Dorea <hugo@hackcapital.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ops-sdk = { git = "ssh://git@git.cto.ai:2224/ops/sdk-rs.git" }
clap = "2.33.0"
