[package]
name = "cto-ai"
version = "1.0.0"
authors = ["Danielle Brook-Roberge <danielle@cto.ai>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.9"
serde = "1.0"
serde_json = "1.0"
libc = "0.2"
chrono = {version = "0.4", features = ["serde"]}
custom_error = "1.7"

[dev-dependencies]
httpmock = "0.3.3"
