[package]
name = "cto-ai"
version = "1.1.0"
authors = ["Danielle Brook-Roberge <danielle@cto.ai>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.10", features = ["blocking", "json"]}
openssl = { version = "0.10.52", features = ["vendored"] } # reqwest transient dep
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
libc = "0.2"
chrono = {version = "0.4", features = ["serde"]}
custom_error = "1.7"

[dev-dependencies]
mockito = "0.23"
